# cvbankas

./: .gitignore  README.md  links.txt  parse.py  parse_discovery.py  pyproject.toml  scrape.py  scrape_discovery.py  scraper.py
.github/workflows/: ci.yml
cv_scraper/: create_table.py  fill_db.py
cvbankas/: downloaders.py  fill_db.py  main.py  parse.py  parse_discovery.py  schema.sql  scrape.py  scrape_discovery.py
downloaders/: BaseDownloader.py  CamoufoxDownloader.py  CffiDownloader.py  PlayrightDownloader.py
html/: file0.html  file1.html  file10.html  file11.html  file12.html  file13.html  file14.html  file15.html  file16.html  file17.html  file18.html  file19.html  file2.html  file20.html  file21.html  file22.html  file23.html  file24.html  file25.html  file26.html  file27.html  file28.html  file29.html  file3.html  file30.html  file31.html  file32.html  file33.html  file34.html  file35.html  file36.html  file37.html  file38.html  file39.html  file4.html  file40.html  file41.html  file42.html  file43.html  file44.html  (+34 more)
