[tool.poetry]
package-mode = false

[project]
name = "cvbankas"
version = "0.1.0"
description = "scraper for cvbankas"
authors = [
    {name = "Valdovas",email = "z.kamarauskas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "parsel (>=1.11.0,<2.0.0)",
    "camoufox (>=0.4.11,<0.5.0) ; python_version >= \"3.12\" and python_version < \"4.0\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
